# ieeg-data

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
base/: __init__.py  bids_session.py  session.py
datasets/: base.py  bi_blackrock_neurodynamics_2025.py  vanblooijs_hermes_developmental_2023.py  wang_barbu_braintreebank_2023.py
datasets/bi_blackrock_neurodynamics_2025/: pipeline.py  prepare_data.py  requirements.txt
datasets/bi_blackrock_neurodynamics_2025/utils/: triggers_DET36A2_extract.ipynb  triggers_task_extract_align.ipynb
datasets/mit_bidmc_neurodynamics_2025/: prepare_data.py  requirements.txt
datasets/precision_bidmc_iom_2025/: pipeline.py  prepare_data.py  requirements.txt
datasets/vanblooijs_hermes_developmental_2023/: pipeline.py  prepare_data.py  requirements.txt
datasets/wang_barbu_braintreebank_2023/: pipeline.py  prepare_data.py  requirements.txt
ieeg_data/: __init__.py  bids_pipeline.py  format.py  pipeline.py
