[project]
name = "ieeg-data"
version = "0.1.0"
description = "Processing intracranial EEG datasets into the temporaldata format using brainsets."
authors = [
    { name = "Andrii Zahorodnii" },
    { name = "Alexander Brady" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "brainsets",
    "h5py>=3.15.1",
    "pandas>=2.3.3",
    "temporaldata>=0.1.3",
]

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["ieeg_data"]

[dependency-groups]
bids = [
    "mne-bids>=0.17.0",
    "numpy>=2.3.5",
]
dev = [
    "mypy>=1.19.0",
    "ruff>=0.14.7",
]

[tool.uv.sources]
brainsets = { git = "https://github.com/neuro-galaxy/brainsets.git", rev = "90f2d1f" }  # Use new brainsets Pipeline API

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]  # basics: style, flakes, isort, pyupgrade, bugbear
ignore = ["E501"]                    # let the formatter handle wrapping

[tool.ruff.lint.isort]
known-first-party = ["ieeg_data"]

[tool.mypy]
python_version = "3.11"
files = ["ieeg_data", "datasets"]
exclude = ["\\.venv", "env", "build", "dist"]
follow_imports = "skip"  # don't analyze third-party libs
ignore_missing_imports = true
